ingress-egress/mtls-test/dr.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: legacy-dr
  namespace: istio-demo
  labels:
    cfg: ingress-egress
spec:
  host: custom-egressgateway-svc.istio-demo.svc.cluster.local
  subsets:
    - name: worldtime-mtls
      trafficPolicy:
        portLevelSettings:
          - port:
              number: 443
              protocol: HTTPS
              name: https-worldtimeapi
            tls:
              mode: ISTIO_MUTUAL
              sni: worldtimeapi.org
    - name: jsonplaceholder-mtls
      trafficPolicy:
        portLevelSettings:
          - port:
              number: 80
              protocol: HTTP
              name: https-jsonplaceholder
            tls:
              mode: DISABLE
